Refactor maptoListEmployeeDto to use toList()
Updated maptoListEmployeeDto method to use toList() instead of collect() for stream.